--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
   </head>
   <body>
     <div id="card">
-      <img src="iphone.png" alt="iPhone 11 black" />
+      <img src="/img/iphone.png" alt="iPhone 11 black" />
       <h1>iPhone 11</h1>
       <div id="desc">
-        <p>Light Purple</p>
+        <p>Lilás</p>
         <p id="giga">128gb</p>
-        <p>Double Camera</p>
+        <p>Câmera Dupla</p>
       </div>
       <h2>R$3.299,99 à vista</h2>
       <button>Buy here!</button>
     </div>
 
     <div id="card">
-      <img src="iphone.png" alt="iPhone 11 black" />
+      <img src="/img/iphone.png" alt="iPhone 11 black" />
       <h1>iPhone 11</h1>
       <div id="desc">
-        <p>Light Purple</p>
+        <p>Lilás</p>
         <p id="giga">128gb</p>
-        <p>Double Camera</p>
+        <p>Câmera Dupla</p>
       </div>
       <h2>R$3.299,99 à vista</h2>
       <button>Buy here!</button>
     </div>
 
     <div id="card">
-      <img src="iphone.png" alt="iPhone 11 black" />
+      <img src="/img/iphone.png" alt="iPhone 11 black" />
       <h1>iPhone 11</h1>
       <div id="desc">
-        <p>Light Purple</p>
+        <p>Lilás</p>
         <p id="giga">128gb</p>
-        <p>Double Camera</p>
+        <p>Câmera Dupla</p>
       </div>
       <h2>R$3.299,99 à vista</h2>
       <button>Buy here!</button>
